Added persistent storage and started on some basic components

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(theme.css);
+@import url(utils.css);
 
 body {
   margin: 0;
@@ -12,4 +13,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
 }
