--- a/src/utils.css
+++ b/src/utils.css
@@ -1,3 +1,12 @@
+.block-l {
+    margin-bottom: 1.5rem;
+}
+
+
 .block-m {
     margin-bottom: 1rem;
+}
+
+.block-s {
+    margin-bottom: 0.5rem;
 }
