Completed loading of files
can load through link, copy/paste and uploading of local files

--- a/src/application.module.css
+++ b/src/application.module.css
@@ -16,7 +16,12 @@
   width: 40vmin;
 }
 .logo_loadnew {
-  width: 20vmin;
+  width: 35vmin;
+}
+.logo_loadnew_uploadfile,
+.logo_loadnew_copypaste,
+.logo_loadnew_linktofile {
+  width: 30vmin;
 }
 
 .header {
