--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 :root {
     --theme-color: #c1272d;
+    --theme-open-color: #27c178;
     --text-color: #3e3832;
     --background-color: #f7f7f7;
     --ring: #e0e0e0;
