Fixed mobile styling on listview-page

--- a/src/application.module.css
+++ b/src/application.module.css
@@ -32,8 +32,10 @@
 }
 
 .content {
-    width: 40vmin;
+    max-width: 25rem;
+    width: 100%;
     margin: 0 auto;
+    padding: 0 1rem;
 }
 
 .header {
