--- a/src/views/encrypted-files/listview.module.css
+++ b/src/views/encrypted-files/listview.module.css
@@ -4,16 +4,16 @@
     margin: 0;
 }
 
-.list_element a {
+.list_element button {
     position: relative;
     color: var(--text-color);
     text-decoration: none;
     display: block;
-    padding: 0.5rem;
-
+    padding: 0.75rem;
+    font-size: 1rem;
 }
 
-.list_element a:focus {
+.list_element button:focus {
     outline: 0;
     box-shadow: 0 0 0 1px var(--text-color);
     z-index: 1;
