Add linkstyling prop to button component, making it look like a link

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -22,3 +22,9 @@
   border-color: var(--highlight);
   background-color: var(--background-color);
 }
+
+.linkstyling {
+  background: none;
+  border: none;
+  text-decoration: underline;
+}
