--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -27,3 +27,39 @@
     width: 100%;
     mix-blend-mode: multiply;
 }
+
+@media (max-width: 45rem) {
+    .responsive_table table,
+    .responsive_table thead,
+    .responsive_table tbody,
+    .responsive_table tr,
+    .responsive_table th,
+    .responsive_table td,
+    .responsive_table caption {
+        display: block;
+    }
+    .responsive_table thead tr {
+        position: absolute;
+        left: -9999px;
+    }
+    .responsive_table tbody tr:not(:last-child) {
+        padding-bottom: 0.5rem;
+        margin-bottom: 0.5rem;
+        border-bottom: 1px solid var(--text-color);
+    }
+    .responsive_table td {
+        position: relative;
+        padding-left: 50%;
+    }
+    .responsive_table td:before {
+        position: absolute;
+        left: 0;
+        width: 50%;
+        white-space: nowrap;
+        font-weight: bold;
+    }
+
+    .responsive_table td:nth-of-type(1):before { content: "Name"; }
+    .responsive_table td:nth-of-type(2):before { content: "Private/Public"; }
+    .responsive_table td:nth-of-type(3):before { content: "Description"; }
+}
