--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -8,6 +8,7 @@
     overflow: auto;
     max-height: 100%;
     width: 100%;
+    max-width: 50rem;
     margin-bottom: 0;
     z-index: 1010;
     background-color: var(--background-color);
