--- a/src/views/load-new/load-new.module.css
+++ b/src/views/load-new/load-new.module.css
@@ -12,7 +12,7 @@
   display: block;
   text-align: center;
   border: 2px dashed var(--highlight-darker);
-  border-radius: 4px;
+  border-radius: 0.25rem;
   padding: 2rem
 }
 
